Created Changelog
Added firebase