@@ -1,2 +1,3 @@
 Created Changelog
 Added firebase
+Fixed firebase
